[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/backgroundmenu.jpg" type="Texture" id=1]
[ext_resource path="res://assets/caxa1.svg" type="Texture" id=2]
[ext_resource path="res://scripts/quit.gd" type="Script" id=3]
[ext_resource path="res://scripts/continue.gd" type="Script" id=4]
[ext_resource path="res://assets/button.svg" type="Texture" id=5]
[ext_resource path="res://assets/caxa2.svg" type="Texture" id=6]
[ext_resource path="res://assets/caxa3.svg" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "btn",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/SigmarOne-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 22
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "btn",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/SigmarOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 22
use_mipmaps = true
use_filter = true
font_data = SubResource( 5 )

[node name="pause" type="Node2D"]

[node name="backgroundPause" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="continue" type="Button" parent="."]
margin_left = 496.0
margin_top = 232.0
margin_right = 737.0
margin_bottom = 277.0
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="continue"]
position = Vector2( 119, 59 )
scale = Vector2( 0.470588, 0.470588 )
frames = SubResource( 1 )
animation = "btn"

[node name="Sprite" type="Sprite" parent="continue"]
position = Vector2( 121.109, 25 )
scale = Vector2( 0.468155, 0.447917 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="continue"]
margin_right = 244.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "continuar"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 508.0
margin_top = 420.0
margin_right = 745.0
margin_bottom = 465.0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="quit"]
position = Vector2( 120, 72 )
scale = Vector2( 0.429412, 0.429412 )
frames = SubResource( 4 )
animation = "btn"

[node name="Sprite" type="Sprite" parent="quit"]
position = Vector2( 116, 36 )
scale = Vector2( 0.46875, 0.46875 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="quit"]
margin_left = -4.0
margin_top = 4.0
margin_right = 233.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
text = "SAIR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="continue" to="continue" method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="continue" to="continue" method="_on_continue_mouse_exited"]
[connection signal="pressed" from="continue" to="continue" method="_on_continue_pressed"]
[connection signal="mouse_entered" from="quit" to="quit" method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="quit" method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="quit" method="_on_quit_pressed"]
